core: list page
